--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "antd": "^5.26.2",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "next": "15.3.4",
     "react": "^19.0.0",
